changed memory.cpp to memory.c, started coding the memory.

--- a/assignment1/makefile
+++ b/assignment1/makefile
@@ -2,5 +2,5 @@ all: cpu memory
 
 cpu : cpu.cpp
 	g++ -Wall cpu.cpp -o cpu
-memory : memory.cpp
-	g++ -Wall memory.cpp -o memory
+memory : memory.c
+	gcc -Wall memory.c -o memory
