added cpu.c, modified make file. cpu.cpp is still kept as backup.

--- a/assignment1/makefile
+++ b/assignment1/makefile
@@ -1,6 +1,6 @@
 all: cpu memory
 
-cpu : cpu.cpp
-	g++ -Wall cpu.cpp -o cpu
+cpu : cpu.c
+	gcc -Wall cpu.c -o cpu
 memory : memory.c
 	gcc -Wall memory.c -o memory
